--- a/src/main/webapp/WEB-INF/jsp/jspf/change_bet.jspf
+++ b/src/main/webapp/WEB-INF/jsp/jspf/change_bet.jspf
@@ -26,7 +26,7 @@
                     </div>
 
                     <div>
-                        <input type="radio" name="betType" value="team1" onclick="agreeForm(document.getElementById('form1'))" required>
+                        <input type="radio" name="betType" value="Team1" onclick="agreeForm(document.getElementById('form1'))" required>
                     </div>
                 </div>
 
@@ -37,7 +37,7 @@
                     </div>
 
                     <div>
-                        <input type="radio" name="betType" value="draw" onclick="agreeForm(document.getElementById('form1'))" required>
+                        <input type="radio" name="betType" value="Draw" onclick="agreeForm(document.getElementById('form1'))" required>
                     </div>
                 </div>
 
@@ -49,7 +49,7 @@
 
 
                     <div>
-                        <input type="radio" name="betType" value="team2" onclick="agreeForm(document.getElementById('form1'))" required >
+                        <input type="radio" name="betType" value="Team2" onclick="agreeForm(document.getElementById('form1'))" required >
                     </div>
                 </div>
 
@@ -60,7 +60,7 @@
                     </div>
 
                     <div class="ExAcc" >
-                        <input id="form1" type="radio" name="betType" value="exAcc" onclick="agreeForm(this)" required>
+                        <input id="form1" type="radio" name="betType" value="ExactScore" onclick="agreeForm(this)" required>
                     </div>
                 </div>
 
@@ -86,7 +86,7 @@
 
         <p style="text-align: center; padding-bottom: 10px;">
             <input type="hidden" name="matchId" value="${sessionScope.match.id}"/>
-            <input type="hidden" name="command" value="change_bet"/>
+            <input type="hidden" name="command" value="CHANGE_BET"/>
             <input type="button" value='<fmt:message key="change_bet.confirm"/>' onclick="return confirmSubm($('.changeBet'))"/>
         </p>
     </form>
